# CS-6140-Project-CBO-for-NN-HPO

./: .gitignore  CS_6140_Active_ML_EA_BO_MOO_References.bib  README.md  pyproject.toml
not_in_use/: train_test_network.py
src/Ax_BO/: conduct_experiment.py  conduct_experiment_developer.py  example_experiment_rendering.py  example_experiment_rendering_tutorial_code.py  experiment_definition.py  threshold_global_stopping.py
src/Ax_BO/tutorial_code/: early_trial_stopping_tutorial_code.py  mnist_train_nas.py
src/network/: create_network.py  create_network_lightning.py  create_network_lightning_2.py  create_optimizer.py  evaluate_network.py  load_data.py  train_test_network.py
test/: analysis.py  rough_draft_testing.py
