[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ADMMBO-NN-HPO"
version = "0.0.1"
authors = [
  { name="Gil Benezer", email="gil.benezer@gmail.com" },
]
description = "Python package for CS 6140 project ADMMBO for NN HPO"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GNU GPLv3"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/gbenezer/CS-6140-Project-CBO-for-NN-HPO"